Portfolio Capstone Project

--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
-hallo
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mein Portfolio</title>
+</head>
+
+<body>
+
+    <h2>Über mich</h2>
+    <img src="Foto.png" width="200">
+    <p>Kurze Zusammenfassung oder so</p>
+    <p>Kontaktinformation</p>
+
+    <h2>Bildungsweg</h2>
+    <ul>
+        <li>
+            Studium - Informatik (B.Sc.)<br>
+            Universität Münster<br>
+            Nebenfach: Betriebswirtschaftslehre<br>
+            Bachelorarbeit: Sicherheit des RSA- und des NTRUVerschlüsselungssystems
+            gegen Angriffe mit Shors Algorithmus<br>
+            Abschlussnote: 2,9
+        </li>
+        <li>
+            Abitur<br>
+            Freiherr-vom-Stein-Gymnasium Münster<br>
+            Leistungskurse: Mathematik, Physik<br>
+            Abschlussnote: 2,1
+        </li>
+        <li>Grundschule?</li>
+    </ul>
+    <hr>
+
+    <!-- <h3>Berufserfahrung</h3>
+    <p>keine</p> -->
+
+    <h3>Weitere Fähigkeiten und Kenntnisse</h3>
+    <h4>Sprachkenntnisse</h4>
+    <ul>
+        <li>Deutsch - Muttersprache</li>
+        <li>Englisch - fließend</li>
+        <li>Französisch - Grundkenntnisse</li>
+    </ul>
+    <h4>Programmierkenntnisse</h4>
+    <ul>
+        <li>Java - Fortgeschrittene Kenntnisse</li>
+        <li>C / C++ - Grundkenntnisse</li>
+        <li>Python - Grundkenntnisse</li>
+    </ul>
+    <h4>Datenbanksysteme</h4>
+    <ul>
+        <li>SQL - Grundkenntnisse</li>
+    </ul>
+
+    <h4>Webentwicklung</h4>
+    <ul>
+        <li>HTML - Grundkenntnisse</li>
+        <li>CSS - Grundkenntnisse</li>
+        <li>PHP - Grundkenntnisse</li>
+        <li>JavaScript - Grundkenntnisse</li>
+    </ul>
+
+    
+</body>
+
+</html>
