Portfolio Capstone Project 2

--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
         <li>JavaScript - Grundkenntnisse</li>
     </ul>
 
-    
+    <footer>
+        <p>2024 Christian Hartke</p>
+    </footer>
 </body>
 
 </html>
